--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "framer-motion": "^3.7.0",
     "next": "10.0.7",
+    "nodemailer": "^6.5.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "use-wave": "^1.0.0-beta.6"
@@ -17,6 +18,7 @@
   "devDependencies": {
     "@svgr/webpack": "^5.5.0",
     "@types/node": "^14.14.31",
+    "@types/nodemailer": "^6.4.0",
     "@types/react": "^17.0.2",
     "sass": "^1.32.8",
     "typescript": "^4.2.2"
